--- a/HRworks.Api/HRworks.Api.csproj
+++ b/HRworks.Api/HRworks.Api.csproj
@@ -32,19 +32,20 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.Extensions.ApiDescription.Client" Version="3.0.0">
+	<PackageReference Include="Microsoft.Extensions.ApiDescription.Client" Version="6.0.25">
 	  <PrivateAssets>all</PrivateAssets>
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
-	  <PackageReference Include="DotNet.ReproducibleBuilds" Version="1.1.1">
+	  <PackageReference Include="DotNet.ReproducibleBuilds" Version="0.1.66">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 	  </PackageReference>
-	<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-	<PackageReference Include="NSwag.ApiDescription.Client" Version="13.0.5">
+	<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+	<PackageReference Include="NSwag.ApiDescription.Client" Version="13.20.0">
 	  <PrivateAssets>all</PrivateAssets>
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
+	<PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
