--- a/HRworks.Api.DependencyInjection/HRworks.Api.DependencyInjection.csproj
+++ b/HRworks.Api.DependencyInjection/HRworks.Api.DependencyInjection.csproj
@@ -32,5 +32,9 @@
   <ItemGroup>
 	<ProjectReference Include="..\HRworks.Api\HRworks.Api.csproj" />
   </ItemGroup>
-
+	
+	<ItemGroup>
+		<None Include="icon.png" Pack="true" PackagePath="" />
+		<None Include="README.md" Pack="true" PackagePath="" />
+	</ItemGroup>
 </Project>
